--- a/src/CSS/Business.css
+++ b/src/CSS/Business.css
@@ -1,5 +1,5 @@
 #businessContentTop{
-    background-image: url('../assets/IndividualBackground.jpeg');
+    background-image: url('../assets/businessGraffitit.png');
     height: auto!important;
     background-position: center;
     background-size: 100%;
@@ -130,6 +130,15 @@
 
   .offeringBoxText{
     font-size: 25px;
+    color: white;
+  }
+
+  .OfferingBoxesForMobile{
+    display: none!important;
+  }
+
+  .OfferingBoxesForMobile .largeBox{
+    display: none!important;
   }
 
   @media(max-width:1400px){
@@ -182,5 +191,143 @@
       margin-top: 20px!important;
     }
 
+  }
+
+  @media(max-width:1250px){
+
+    #headingForBusiness{
+      padding-top: 20px!important;
+    }
+    #individualContentOne{
+      margin-top: 130px!important;
+      font-size: 50px!important;
+    }
+
+    #individualContentTwo{
+      margin-top: 30px!important;
+      font-size: 35px!important;
+    }
+
+    #individualContentThree{
+      font-size: 25px!important;
+      margin-top: 30px!important;
+    }
+
+    #businessContentPart h2{
+      font-size: 25px!important;
+    }
+  }
+
+  @media(max-width:500px){
+    #individualContentOne{
+      margin-top: 110px!important;
+      font-size: 21px!important;
+    }
+
+    #individualContentTwo{
+      margin-top: 20px!important;
+      font-size: 15px!important;
+    }
+
+    #individualContentThree{
+      font-size: 12px!important;
+      margin-top: 20px!important;
+    }
+
+    .offeringBoxes{
+      display: none!important;
+    }
+
+    #businessOfferings{
+      margin-top: -50px!important;
+    }
+
+    .OfferingBoxesForMobile{
+      display: flex!important;
+    }
+
+    .OfferingBoxesForMobile .offeringBox{
+      margin: 0px!important;
+      z-index: 3!important;
+      margin-top: 50px!important;
+      display: flex!important;
+      justify-content: center!important;
+      align-items: center!important;
+      margin-left: 25px!Important;
+    }
+
+    .OfferingBoxesForMobile .offeringBox h1{
+      font-size: 15px!important;
+      text-align: center!important;
+    }
+
+    .mobileServices, .mobileServices h1{
+      display: block;
+      z-index: 3!important;
+      color: white;
+    }
+
+    .OfferingBoxesForMobile .largeBox{
+      display: flex!important;
+      z-index: 3!important;
+      margin-top: 40px;
+      width: 310px!important;
+      height: 100px!important;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .OfferingBoxesForMobile .largeBox #firstH1OfLargeBox{
+      font-size: 35px!important;
+    }
+
+    .OfferingBoxesForMobile .largeBox #secondH1OfLargeBox{
+      font-size: 10px!important;
+    }
+
+    #businessContentPart h1{
+      font-size: 20px!important;
+      margin-top: -30px!important;
+    }
+
+    .businessContentTextBox{
+      margin-left: -100px!important;
+      width: 300px!important;
+      height: 500px!important;
+    }
+
+    .businessContentTextBox h2{
+      font-size: 10px!important;
+    }
+
+    #businessContentPart h2{
+      font-size: 18px!important;
+      margin-left: 15px!important;
+      margin-right: 15px!important;
+    }
+
+    #businessContentPart li h2{
+      font-size: 15px!important;
+      justify-content: center!important;
+      text-align: center!important;
+      margin-top: -20px!important;
+      margin-bottom: 0px!important;
+      padding-bottom: 0px!important;
+      margin-left: 0px!important;
+      margin-right: 0px!important;
+      padding-left: 0px!important;
+      padding-right: 0px!important;
+    }
+
+    #leftSideContent h1{
+      margin-top: -200px!important;
+      font-size: 40px!important;
+    }
+
+    #leftSideContent h6{
+      font-size: 15px!important;
+      margin-left: -20px!important;
+    }
+    
   }
   
