--- a/src/CSS/Individual.css
+++ b/src/CSS/Individual.css
@@ -50,15 +50,45 @@
     z-index: 1;
 }
 
-.typeBoxes{
+.typeBoxes {
     background-color: #02C37E;
     height: 700px;
     width: 450px;
     margin-top: 240px;
     border-radius: 35px;
     margin-bottom: 100px;
+    position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px rgba(6, 13, 109, 0.4); /* Example box shadow */
 }
 
+
+#genHeading{
+    padding-top: 150px;
+}
+
+.frontContent,
+.backContent {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+#genZMainContent{
+    padding-top: 100px;
+    width: 92%;
+    margin-left: 4%;
+}
+
+.backContent {
+    transform: rotateY(180deg);
+}
+
+.typeBoxes:hover {
+    transform: rotateY(180deg);
+}
 @media(max-width:1400px){
     #individualContentOne{
         margin-top: 190px!important;
