--- a/src/CSS/Form.css
+++ b/src/CSS/Form.css
@@ -20,6 +20,14 @@
     z-index: 1;
 }
 
+#text_sectionForIndividual,
+#form_sectionForIndividual {
+    position: relative;
+    z-index: 3;
+    color: black;
+    padding-top: 200px;
+}
+
 #text_section,
 #form_section {
     position: relative;
@@ -28,11 +36,23 @@
     padding-top: 200px;
 }
 
+.main_formForIndividual {
+    width: 100% !important;
+}
+
 .main_form {
     width: 100% !important;
 }
 
 @media(max-width:1400px){
+    #leftSideContentForIndividual h1{
+        font-size: 35px!important;
+    }
+
+    .formGenTypeForIndividual{
+        font-size: 30px!important;
+    }
+
     #leftSideContent h1{
         font-size: 35px!important;
     }
@@ -47,26 +67,74 @@
         flex-direction: column!important;
     }
 
+    #text_sectionForIndividual, #form_sectionForIndividual{
+        width: 95%!important;
+        /* margin-left: 2.5%!important; */
+        z-index: 3!important;
+    }
+
+    #text_sectionForIndividual{
+        margin-top: -60px!important;
+    }
+
+    #whatWeOffer    
+    #text_sectionForIndividual h1{
+        font-size: 15px!important;
+        text-align: center;
+    }
+
+    #leftSideContentForIndividual #whatWeOffer{
+        font-size: 25px!important;
+        text-align: center;
+    }
+
+    #leftSideContentForIndividual #potential{
+        font-size: 20px!important;
+        text-align: center;
+    }
+
+    #leftSideContentForIndividual h2{
+        margin-top: -20px!important;
+    }
+
+    #leftSideContentForIndividual li{
+        font-size: 15px!important;
+        margin-left: -20px!important;
+    }
+
+
     #text_section, #form_section{
         width: 95%!important;
-        margin-left: 2.5%!important;
-        margin-top: -70px!important;
+        /* margin-left: 2.5%!important; */
+        z-index: 3!important;
     }
 
-    #leftSideContent h1{
-        font-size: 25px!important;
+    #form_sectionForIndividual{
+        margin-top: -150px!important;
+        margin-left: 10px!important;
     }
 
-    .formGenType{
-        font-size: 20px!important;
-    }
 
-    #leftSideContent li{
-        font-size: 19px!important;
-        margin-left: -40px!important;
+
+
+
+
+    #form_section{
+        margin-top: -150px!important;
+        margin-left: 10px!important;
     }
 
     #text_section{
-        margin-bottom: -80px!important;
+        margin-top: -60px!important;
+    }
+
+    #whatWeOffer    
+    #text_section h1{
+        font-size: 20px!important;
+        text-align: center;
+    }
+
+    .formGenType{
+        padding-top: 300px!important;
     }
 }
